Improve navbar and home page structure and design

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,12 +1,10 @@
 .body {
-  background-color: rgb(17, 24, 39);
   color: white;
   min-height: 100vh;
 }
 
 .container {
-  max-width: 1200px;
+  /* max-width: 1200px; */
   margin: 0 auto;
-  padding: 0 1rem;
   width: 100%;
 }
