--- a/src/shared/components/Navbar/Navbar.module.css
+++ b/src/shared/components/Navbar/Navbar.module.css
@@ -34,14 +34,48 @@
 }
 
 .link {
+  position: relative;
   margin: 0 1rem;
+  font-size: 1.1rem;
   color: #fff;
   text-decoration: none;
   transition: color 0.3s ease;
+  padding-bottom: 5px;
+}
+
+.link::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #0ac4ff;
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
 }
 
 .link:hover {
-  color: #007bff;
+  color: #0ac4ff;
+}
+
+.link:hover::after {
+  transform: scaleX(1);
+}
+
+.link span.active {
+  color: #0ac4ff;
+}
+
+.link span.active::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #0ac4ff;
+  transform: scaleX(1);
 }
 
 .searchButton,
