--- a/src/shared/components/Navbar/Navbar.module.css
+++ b/src/shared/components/Navbar/Navbar.module.css
@@ -30,7 +30,8 @@
 .rightSection {
   width: 20%;
   justify-content: flex-end;
-  padding-right: 20px;
+  gap: 20px;
+  padding-right: 30px;
 }
 
 .link {
@@ -40,13 +41,13 @@
   color: #fff;
   text-decoration: none;
   transition: color 0.3s ease;
-  padding-bottom: 5px;
+  padding-bottom: 2px;
 }
 
 .link::after {
   content: "";
   position: absolute;
-  bottom: 0;
+  bottom: -2px;
   left: 0;
   width: 100%;
   height: 2px;
@@ -70,7 +71,7 @@
 .link span.active::after {
   content: "";
   position: absolute;
-  bottom: 0;
+  bottom: -2px;
   left: 0;
   width: 100%;
   height: 2px;
@@ -87,6 +88,10 @@
   font-size: 1.2rem;
   margin-left: 1rem;
   cursor: pointer;
+}
+
+.profileImage {
+  border-radius: 50%;
 }
 
 @media (max-width: 1200px) {
