--- a/src/shared/styles/globals.css
+++ b/src/shared/styles/globals.css
@@ -43,3 +43,65 @@ a {
     color-scheme: dark;
   }
 }
+
+.container {
+  display: flex;
+  min-height: 100vh;
+}
+
+.sidebar {
+  /* position: sticky; */
+  top: 60px;
+  bottom: 0;
+  width: 20%;
+  overflow-y: auto;
+  background-color: rgba(22, 22, 22, 1);
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.leftSidebar {
+  left: 0;
+  border-right: 2px solid rgba(255, 255, 255, 0.1);
+}
+
+.rightSidebar {
+  right: 0;
+  border-left: 2px solid rgba(255, 255, 255, 0.1);
+}
+
+.sidebarSection {
+  padding: 1rem;
+  margin-bottom: 20px;
+}
+
+.sidebarSection h2 {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.mainContent {
+  flex-grow: 1;
+  padding: 3rem;
+  box-sizing: border-box;
+}
+
+@media (max-width: 1200px) {
+  .sidebar {
+    width: 250px;
+  }
+  .mainContent {
+    margin-left: 250px;
+    margin-right: 250px;
+  }
+}
+
+@media (max-width: 992px) {
+  .sidebar {
+    display: none;
+  }
+  .mainContent {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
